@@ -1,3 +1,9 @@
+2010-11-01  Glenn Morris  <rgm@gnu.org>
+
+	* gnus-util.el (iswitchb-read-buffer): Declare rather than autoload.
+	(gnus-iswitchb-completing-read): Require iswitchb.
+	(gnus-select-frame-set-input-focus): Silence compiler.
+
 2010-10-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* message.el (message-subject-trailing-was-query): Change default to t,
